# LIMB2-DVA513

./: .gitignore  README.md
Camera_testing/: README.md  limb_vision_test.cpp
Camera_testing/json_files/: patient_1_move1_fast.json  patient_1_move1_fast_set1.json  patient_1_move1_fast_set2.json  patient_1_move1_med.json  patient_1_move1_med_set1.json  patient_1_move1_med_set2.json  patient_1_move1_slow.json  patient_1_move1_slow_set1.json  patient_1_move1_slow_set2.json  patient_1_move2_fast.json  patient_1_move2_fast_set1.json  patient_1_move2_fast_set2.json  patient_1_move2_med.json  patient_1_move2_med_set1.json  patient_1_move2_med_set2.json  patient_1_move2_slow.json  patient_1_move2_slow_set1.json  patient_1_move2_slow_set2.json  patient_1_move3_fast.json  patient_1_move3_fast_set1.json  patient_1_move3_fast_set2.json  patient_1_move3_med.json  patient_1_move3_med_set1.json  patient_1_move3_med_set2.json  patient_1_move3_slow.json  patient_1_move3_slow_set1.json  patient_1_move3_slow_set2.json  patient_2_move1_fast.json  patient_2_move1_fast_set1.json  patient_2_move1_fast_set2.json  patient_2_move1_med.json  patient_2_move1_med_set1.json  patient_2_move1_med_set2.json  patient_2_move1_slow.json  patient_2_move1_slow_set1.json  patient_2_move1_slow_set2.json  patient_2_move2_fast.json  patient_2_move2_fast_set1.json  patient_2_move2_fast_set2.json  patient_2_move2_med.json  (+23 more)
Camera_testing/json_files/ga_profiles/: patient_1_profile.json  patient_2_profile.json  patient_3_profile.json
Inverse Kinematics/: CMakeLists.txt  README.md
Inverse Kinematics/include/: fabrik.cpp  fabrik.h
Inverse Kinematics/src/: FABRIK.cpp  main.cpp
camera_vision/: camera.cpp
camera_vision/camera_test/Camera_test/: CMakeLists.txt  limb_feature_extraction.cpp
camera_vision/camera_test/__MACOSX/Camera_test/: ._CMakeLists.txt  ._limb_feature_extraction.cpp  ._pose_detection_sh4.blob  ._pose_landmark_full_sh4.blob
camera_vision/depthai_test/: CMakeLists.txt
camera_vision/depthai_test/src/: main.cpp
genetic_algorithm/: jsonSetup.py
genetic_algorithm/GA_1/: crossover.m  fitnessFunction.m  initPopulation.m  mutate.m  patient_1_move1_ga_input.json  patient_1_move2_ga_input.json  patient_1_move3_ga_input.json  patient_2_move1_ga_input.json  patient_2_move2_ga_input.json  patient_2_move3_ga_input.json  patient_3_move1_ga_input.json  patient_3_move2_ga_input.json  patient_3_move3_ga_input.json  runAllMovements.m  runGA.m  saveUserProfile.m  tournamentSelection.m
